Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57495

Unregistered metatype warnings

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.8.0
    • 5.8.0 RC
    • Qt3D
    • None
    • f915a9be2e6ccfd1655971edebe2ce13c8c4ab2e

    Description

      Qt3DRender::QCamera* and Qt3DInput:: QAbstractPhysicalDevice* both need to be registered with the metatype system to avoid runtime warnings and problems.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            seanharmer Sean Harmer
            seanharmer Sean Harmer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes