Fix warnings about unregistered metatypes

Task-number: QTBUG-57495
Change-Id: Ia1dc858d3c6c223498cec3644dcd8d35b7181630
Reviewed-by: Kevin Ottens <kevin.ottens@kdab.com>